# ogi

./: .env.example  .gitignore  AGENTS.md  LEGAL.md  README.md  docker-compose.prod.yml  docker-compose.yml  implementation_plan_phase_2.md
.claude/: settings.local.json
.github/: FUNDING.yml  release.yml
backend/: .dockerignore  Dockerfile  entrypoint.sh  ogi.db-shm  ogi.db-wal  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 6df893ec4652_sqlmodel_migration.py  8d9ca6951e29_initial_schema.py  8e4a7d2c1f21_add_origin_source_to_entities.py  a1b2c3d4e5f6_add_username_entity_type.py  b7c1d2e3f4a5_add_agent_runs_and_steps.py  bcccdd54e922_initial_schema.py  c92513d84508_initial_schema.py  cd7b6a14b944_initial_schema.py  d4e5f6a7b8c9_merge_agent_and_username_heads.py  e5f6a7b8c9d0_add_agent_user_settings.py  f2b9c4d7a1e3_add_system_audit_logs.py  f936ea88838b_initial_schema.py
backend/ogi/: config.py  main.py
backend/ogi/agent/: __init__.py  context.py  llm_provider.py  models.py  orchestrator.py  run_worker.py  settings_models.py  settings_store.py  store.py  tool_implementations.py  tools.py
backend/ogi/api/: agent.py  api_keys.py  auth.py  dependencies.py  discover.py  edges.py  entities.py  events.py  export.py  graph.py  import_.py  locations.py  map.py  members.py  plugins.py  projects.py  registry.py  router.py  timeline.py  transforms.py  websocket.py
backend/ogi/cli/: backend_client.py  installer.py  lockfile.py  main.py  registry.py  user_config.py
backend/ogi/cli/commands/: config.py  transform.py
backend/ogi/db/: alembic_runner.py  database.py  migrations.py
backend/ogi/engine/: analysis.py  entity_registry.py  graph_engine.py  plugin_engine.py  sandbox_runner.py  transform_engine.py  transform_execution_service.py
backend/ogi/models/: __init__.py  api_key.py  auth.py  edge.py  entity.py  eventing.py  graph.py  plugin.py  project.py  transform.py  transform_settings.py  user_plugin_preference.py
backend/ogi/store/: api_key_store.py  audit_log_store.py  edge_store.py  entity_store.py  location_search_store.py  map_store.py  nearby_network_store.py  project_event_store.py  project_store.py  sun_store.py  system_audit_log_store.py  timeline_store.py  timezone_store.py  transform_run_store.py  transform_settings_store.py  user_plugin_preference_store.py  weather_store.py
backend/ogi/transforms/: base.py
backend/ogi/transforms/cert/: cert_transparency.py
backend/ogi/transforms/dns/: domain_to_ip.py  domain_to_mx.py  domain_to_ns.py  ip_to_domain.py  whois_lookup.py
backend/ogi/transforms/email/: domain_to_emails.py
backend/ogi/transforms/hash/: hash_lookup.py
backend/ogi/transforms/ip/: ip_to_asn.py
backend/ogi/transforms/location/: __init__.py  location_to_geocode.py  location_to_nearby_asns.py  location_to_reverse_geocode.py  location_to_sun_times.py  location_to_timezone.py  location_to_weather_snapshot.py
backend/ogi/transforms/org/: __init__.py  organization_to_team_members.py
backend/ogi/transforms/person/: __init__.py  person_to_usernames.py
backend/ogi/transforms/social/: username_search.py
backend/ogi/transforms/web/: content_to_iocs.py  domain_to_urls.py  url_to_content.py  url_to_headers.py  url_to_links.py  website_to_people.py
backend/ogi/worker/: run_worker.py  transform_job.py
backend/scripts/: reset_db.py
backend/tests/: test_agent_runtime.py  test_analysis.py  test_api.py  test_cli_config.py  test_cli_installer.py  test_dependencies.py  test_graph_engine.py  test_models.py  test_registry_popularity.py  test_sandbox_runner.py  test_security.py  test_transform_engine.py  test_transforms.py  test_transforms_phase2.py
docs/: implementation_plan.md  implementation_plan_phase_1.md  implementation_plan_phase_3.md  implementation_plan_queue_and_ws.md  implementation_plan_transform_hub.md
frontend/: Dockerfile  README.md  env.js.template  index.html  nginx.conf  package.json  (+2 more)
(+116 files in other folders)
