[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ogi"
version = "0.1.0"
description = "OpenGraph Intel — open source link analysis and OSINT framework"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.134.0",
    "uvicorn[standard]>=0.41.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "aiosqlite>=0.22.1",
    "asyncpg>=0.31.0",
    "supabase>=2.28.0",
    "pyyaml>=6.0.3",
    "python-whois>=0.9.6",
    "dnspython>=2.8.0",
    "httpx>=0.28.1",
    "python-multipart>=0.0.22",
    "sqlmodel>=0.0.37",
    "alembic>=1.18.4",
    "typer>=0.24.1",
]

[project.scripts]
ogi = "ogi.cli.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.28.1",
]

[tool.setuptools.packages.find]
include = ["ogi*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
