[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ogi"
version = "0.2.3"
description = "OpenGraph Intel — open source link analysis and OSINT framework"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.134.0",
    "uvicorn[standard]>=0.41.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "aiosqlite>=0.22.1",
    "asyncpg>=0.31.0",
    "supabase>=2.28.0",
    "pyyaml>=6.0.3",
    "python-whois>=0.9.6",
    "dnspython>=2.8.0",
    "httpx>=0.28.1",
    "python-multipart>=0.0.22",
    "sqlmodel>=0.0.37",
    "alembic>=1.18.4",
    "typer>=0.24.1",
    "cryptography>=46.0.0",
    "rq>=2.3.0",
    "redis>=6.0.0",
]

[project.scripts]
ogi = "ogi.cli.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.28.1",
    "ruff>=0.14.0",
    "mypy>=1.18.2",
]
web_extract = [
    "iocsearcher>=1.0.0",
    "playwright>=1.55.0",
]

[tool.setuptools.packages.find]
include = ["ogi*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["F"]

[tool.mypy]
python_version = "3.14"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = false
