[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ogi"
version = "0.3.7"
description = "OpenGraph Intel — open source link analysis and OSINT framework"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.1",
    "uvicorn[standard]>=0.41.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "defusedxml>=0.7.1",
    "aiosqlite>=0.22.1",
    "asyncpg>=0.31.0",
    "supabase>=2.28.0",
    "pyyaml>=6.0.3",
    "python-whois>=0.9.6",
    "dnspython>=2.8.0",
    "httpx>=0.28.1",
    "python-multipart>=0.0.22",
    "sqlmodel>=0.0.37",
    "alembic>=1.18.4",
    "typer>=0.24.1",
    "cryptography>=46.0.5",
    "rq>=2.7.0",
    "redis>=7.3.0",
    "timezonefinder>=8.2.1",
    "astral>=3.2",
]

[project.scripts]
ogi = "ogi.cli.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.5",
    "mypy>=1.19.1",
]
web_extract = [
    "iocsearcher>=2.7.2",
    "playwright>=1.58.0",
]

[tool.setuptools.packages.find]
include = ["ogi*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["F"]

[tool.mypy]
python_version = "3.14"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = false
